--- a/students/templates/students/add_course.html
+++ b/students/templates/students/add_course.html
@@ -1,11 +1,11 @@
 {% extends "students/base.html" %}
 {%block body%}
-<h3 class = "text-center m-4">Update a Record</h3>
+<h3 class = "text-center m-4">Add a Course</h3>
 {% if success %}
 <div class = "row justify-content-center">
 <div class = "col-6">
 <div class="alert alert-dismissible alert-success" style = "max-width: 50rem;">
-    The record has been updated.
+    Successfully added a Course.
 </div>
 <a href = "{%url 'index'%}"><button class = "btn btn-primary">OK</button></a>
 </div>
@@ -14,9 +14,9 @@
 <div class = "row justify-content-center">
     <div class = "col-6">
         <div class="card bg-secondary mb-3" style="max-width: 100rem;">
-            <div class="card-header">Record Details</div>
+            <div class="card-header">Major Details</div>
             <div class="card-body">
-                <form action= "" method="POST">
+                <form action="{% url 'add_course' %}" method="POST">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col">
@@ -25,7 +25,7 @@
                     </div>
                     <div class = "row justify-content-end">
                         <div class="col-auto">
-                            <button type="submit" class="btn btn-warning">Edit</button>
+                            <button type="submit" class="btn btn-primary">Add</button>
                             <a href="{% url 'index' %}" class="btn btn-danger ml-2">Cancel</a>
                         </div>
                     </div>
