--- a/students/templates/students/index.html
+++ b/students/templates/students/index.html
@@ -10,12 +10,20 @@
       <a class="nav-link" data-bs-toggle="tab" href="#teachersTab" aria-selected="false" role="tab"
         tabindex="-1">Teachers</a>
     </li>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link" data-bs-toggle="tab" href="#majorsTab" aria-selected="false" role="tab"
+        tabindex="-1">Majors</a>
+    </li>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link" data-bs-toggle="tab" href="#coursesTab" aria-selected="false" role="tab"
+        tabindex="-1">Courses</a>
+    </li>
   </ul>
-  <!-- Student Tab  -->
-  <div id="contentTabs" class="tab-content">
-    <div class="tab-pane fade active show" id="studentsTab" role="tabpanel">
+  <div id="myTabContent" class="tab-content">
+    <!-- Student Tab  -->
+    <div class="tab-pane fade show active" id="studentsTab" role="tabpanel">
       {% if students %}
-      <div class="card bg-light mb-3" id="students">
+      <div class="card bg-light mb-3" id="studentsCard">
         <div class="card-header d-flex justify-content-between">
           <div>
             <h4>Student Lists</h4>
@@ -128,106 +136,266 @@
       </div>
       <a href="{%url 'add_student'%}"><button type="button" class="btn btn-primary">Add
           Students</button></a>
+      {% endif %}
     </div>
-    {% endif %}
-  </div>
-  <!-- Teacher Tab -->
-  <div class="tab-pane fade" id="teachersTab" role="tabpanel">
-    {% if teachers %}
-    <div class="card bg-light mb-3" id="teachers">
-      <div class="card-header d-flex justify-content-between">
-        <div>
-          <h4>Teacher Lists</h4>
+    <!-- Teacher Tab  -->
+    <div class="tab-pane fade" id="teachersTab" role="tabpanel">
+      {% if teachers %}
+      <div class="card bg-light mb-3" id="teachersCard">
+        <div class="card-header d-flex justify-content-between">
+          <div>
+            <h4>Teachers List</h4>
+          </div>
+          <div class="ml-auto"><a href="{%url 'add_teacher'%}"><button type="button" class="btn btn-primary">Add
+                Teacher</button></a></div>
         </div>
-        <div class="ml-auto"><a href="{%url 'add_teacher'%}"><button type="button" class="btn btn-primary">Add
-              Teacher</button></a></div>
-      </div>
-      <div class="card-body">
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th scope="col">EduTeachID</th>
-              <th scope="col">Name</th>
-              <th scope="col">Email</th>
-              <th scope="col">Courses</th>
-              <th scope = "col">Actions</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for i in teachers%}
-            <tr>
-              <td>{{ i.teacher_id}}</td>
-              <td>{{ i.full_name }}</td>
-              <td>{{ i.email }}</td>
-              <td>{{ i.courses }}</td>
-              <td><button type="button" class="btn btn-info me-1" href="{% url 'view_teacher' i.teacher_id %}"
-                  data-bs-toggle="modal" data-bs-target="#teacherModal{{i.teacher_id}}"><i
-                    class="fa-sharp fa-solid fa-circle-info"></i></button>
-                <a class="btn btn-warning me-1" href="{% url 'edit_teacher' i.teacher_id %}"><i
-                    class="fa-sharp fa-solid fa-pen-to-square"></i></a>
-                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                  data-bs-target="#deleteTeacherModal{{i.teacher_id}}"><i class="fa-sharp fa-solid fa-trash"></i></button>
-              </td>
-              <div class="modal fade" id="teacherModal{{i.teacher_id}}" tabindex="-1" aria-labelledby="myModalLabel10"
-                aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title">Teacher Details</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true"></span>
-                      </button>
-                    </div>
-                    <div class="modal-body">
-                      <h3>{{i.full_name}}</h3>
-                      <ul class="list-unstyled">
-                        <li>EduID: <strong>{{i.teacher_id}}</strong></li>
-                        <li>Name: <strong>{{i.full_name}}</strong></li>
-                        <li>Email: <strong>{{i.email}}</strong></li>
-                        <li>Teaching Courses: <strong>{{i.courses}}</strong></li>
-                      </ul>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="modal fade" id="deleteTeacherModal{{i.teacher_id}}" tabindex="-1" aria-labelledby="myModalLabel2"
-                aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h3 class="modal-title">Delete <strong>{{i.full_name}}</strong>?</h3>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true"></span>
-                      </button>
-                    </div>
-                    <div class="modal-body">
-                      <h5>Are you sure to delete this? This can't be <strong>restored</strong>!</h5>
+        <div class="card-body">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">EduTeachID</th>
+                <th scope="col">Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Courses</th>
+                <th scope="col">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for i in teachers%}
+              <tr>
+                <td>{{ i.teacher_id}}</td>
+                <td>{{ i.full_name }}</td>
+                <td>{{ i.email }}</td>
+                <td>{{ i.courses }}</td>
+                <td><button type="button" class="btn btn-info me-1" href="{% url 'view_teacher' i.teacher_id %}"
+                    data-bs-toggle="modal" data-bs-target="#myModalTeacher{{i.teacher_id}}"><i
+                      class="fa-sharp fa-solid fa-circle-info"></i></button>
+                  <a class="btn btn-warning me-1" href="{% url 'edit_teacher' i.teacher_id %}"><i
+                      class="fa-sharp fa-solid fa-pen-to-square"></i></a>
+                  <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#deleteModalTeacher{{i.teacher_id}}"><i
+                      class="fa-sharp fa-solid fa-trash"></i></button>
+                </td>
+                <div class="modal fade" id="myModalTeacher{{i.teacher_id}}" tabindex="-1"
+                  aria-labelledby="myModalLabel10" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title">Teacher Details</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true"></span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <h3>{{i.full_name}}</h3>
+                        <ul class="list-unstyled">
+                          <li>EduTeachID: <strong>{{i.teacher_id}}</strong></li>
+                          <li>Email: <strong>{{i.email}}</strong></li>
+                          <li>Courses: <strong>{{i.courses}}</strong></li>
+                        </ul>
+                      </div>
                       <div class="modal-footer">
-                        <form action="{% url 'delete_teacher' i.teacher_id %}" method="POST">
-                          {% csrf_token %}
-                          <input type="submit" class="btn btn-primary" value='Delete'>
-                        </form>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                       </div>
                     </div>
                   </div>
                 </div>
-            </tr>
-            {%endfor%}
-          </tbody>
-        </table>
+                <div class="modal fade" id="deleteModalTeacher{{i.teacher_id}}" tabindex="-1"
+                  aria-labelledby="myModalLabel02" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h3 class="modal-title">Delete <strong>{{i.full_name}}</strong>?</h3>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true"></span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <h5>Are you sure to delete this? This can't be <strong>restored</strong>!</h5>
+                        <div class="modal-footer">
+                          <form action="{% url 'delete_teacher' i.teacher_id %}" method="POST">
+                            {% csrf_token %}
+                            <input type="submit" class="btn btn-primary" value='Delete'>
+                          </form>
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+              </tr>
+              {%endfor%}
+            </tbody>
+          </table>
+        </div>
       </div>
+      {% else %}
+      <div class="alert alert-dismissible alert-danger" style="width: 35rem;">
+        <strong>Oh snap!</strong> There is no teachers in the record. Considering add a teacher.
+      </div>
+      <a href="{%url 'add_teacher'%}"><button type="button" class="btn btn-primary">Add
+          Students</button></a>
+      {% endif %}
     </div>
-    {% else %}
-    <div class="alert alert-dismissible alert-danger" style="width: 35rem;">
-      <strong>Oh snap!</strong> There is no teachers in the record. Considering add a teacher.
+    <!-- Major Tab  -->
+    <div class="tab-pane fade" id="majorsTab" role="tabpanel">
+      {% if majors %}
+      <div class="card bg-light mb-3" id="majorsCard">
+        <div class="card-header d-flex justify-content-between">
+          <div>
+            <h4>Majors List</h4>
+          </div>
+          <div class="ml-auto"><a href="{%url 'add_major'%}"><button type="button" class="btn btn-primary">Add
+                Major</button></a></div>
+        </div>
+        <div class="card-body">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">MajorID</th>
+                <th scope="col">Major Name</th>
+                <th scope = "col">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for i in majors%}
+              <tr>
+                <td>{{ i.major_id}}</td>
+                <td>{{ i.major_name }}</td>
+                <td>
+                  <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#deleteModalMajor{{i.major_id}}"><i class="fa-sharp fa-solid fa-trash"></i></button>
+                </td>
+                <div class="modal fade" id="deleteModalMajor{{i.major_id}}" tabindex="-1"
+                  aria-labelledby="myModalLabel02" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h3 class="modal-title">Delete <strong>{{i.major_name}}</strong>?</h3>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true"></span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <h5>Are you sure to delete this? This can't be <strong>restored</strong>!</h5>
+                        <div class="modal-footer">
+                          <form action="{% url 'delete_major' i.major_id %}" method="POST">
+                            {% csrf_token %}
+                            <input type="submit" class="btn btn-primary" value='Delete'>
+                          </form>
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+              </tr>
+              {%endfor%}
+            </tbody>
+          </table>
+        </div>
+      </div>
+      {% else %}
+      <div class="alert alert-dismissible alert-danger" style="width: 35rem;">
+        <strong>Oh snap!</strong> There is no majors in the record. Considering add a major.
+      </div>
+      <a href="{%url 'add_major'%}"><button type="button" class="btn btn-primary">Add
+          Major</button></a>
+      {% endif %}
     </div>
-    <a href="{%url 'add_teacher'%}"><button type="button" class="btn btn-primary">Add
-        Teacher</button></a>
+    <!-- Course Tab  -->
+    <div class="tab-pane fade" id="coursesTab" role="tabpanel">
+      {% if courses %}
+      <div class="card bg-light mb-3" id="coursesCard">
+        <div class="card-header d-flex justify-content-between">
+          <div>
+            <h4>Courses List</h4>
+          </div>
+          <div class="ml-auto"><a href="{%url 'add_course'%}"><button type="button" class="btn btn-primary">Add
+                Course</button></a></div>
+        </div>
+        <div class="card-body">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">CourseID</th>
+                <th scope="col">Course Name</th>
+                <th scope="col">SCU</th>
+                <th scope="col">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for i in courses%}
+              <tr>
+                <td>{{ i.course_id}}</td>
+                <td>{{ i.course_name }}</td>
+                <td>{{ i.scu }}</td>
+                <td><button type="button" class="btn btn-info me-1" href="{% url 'view_course' i.course_id %}"
+                    data-bs-toggle="modal" data-bs-target="#myModalCourse{{i.teacher_id}}"><i
+                      class="fa-sharp fa-solid fa-circle-info"></i></button>
+                  <a class="btn btn-warning me-1" href="{% url 'edit_course' i.course_id %}"><i
+                      class="fa-sharp fa-solid fa-pen-to-square"></i></a>
+                  <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                    data-bs-target="#deleteModalCourse{{i.course_id}}"><i
+                      class="fa-sharp fa-solid fa-trash"></i></button>
+                </td>
+                <div class="modal fade" id="myModalCourse{{i.course_id}}" tabindex="-1"
+                  aria-labelledby="myModalLabel10" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title">Course Details</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true"></span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <h3>{{i.course_name}}</h3>
+                        <ul class="list-unstyled">
+                          <li>CourseID: <strong>{{i.course_id}}</strong></li>
+                          <li>SCU: <strong>{{i.scu}}</strong></li>
+                        </ul>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="modal fade" id="deleteModalCourse{{i.course_id}}" tabindex="-1"
+                  aria-labelledby="myModalLabel02" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h3 class="modal-title">Delete <strong>{{i.course_name}}</strong>?</h3>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true"></span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <h5>Are you sure to delete this? This can't be <strong>restored</strong>!</h5>
+                        <div class="modal-footer">
+                          <form action="{% url 'delete_course' i.course_id %}" method="POST">
+                            {% csrf_token %}
+                            <input type="submit" class="btn btn-primary" value='Delete'>
+                          </form>
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+              </tr>
+              {%endfor%}
+            </tbody>
+          </table>
+        </div>
+      </div>
+      {% else %}
+      <div class="alert alert-dismissible alert-danger" style="width: 35rem;">
+        <strong>Oh snap!</strong> There is no courses in the record. Considering add a course.
+      </div>
+      <a href="{%url 'add_course'%}"><button type="button" class="btn btn-primary">Add
+          Course</button></a>
+      {% endif %}
+    </div>
   </div>
-  {% endif %}
 </div>
 {%endblock%}
