--- a/students/templates/students/edit.html
+++ b/students/templates/students/edit.html
@@ -5,7 +5,7 @@
 <div class = "row justify-content-center">
 <div class = "col-6">
 <div class="alert alert-dismissible alert-success" style = "max-width: 50rem;">
-    The record has been updated.
+    Your record has been updated.
 </div>
 <a href = "{%url 'index'%}"><button class = "btn btn-primary">OK</button></a>
 </div>
