--- a/students/templates/students/index.html
+++ b/students/templates/students/index.html
@@ -93,11 +93,21 @@
                               High Merit
                               {% elif i.gpa >= 2 %}
                               Merit
-                              {% else %}
-                              <p style="color: red;">Ineligible to Graduate</p>
-                              {%endif%}
+                              {% elif i.gpa < 0 %} <p style="color: red;">Expelled / Dropped Out</p>
+                                {% else %}
+                                <p style="color: red;">Ineligible to Graduate</p>
+                                {%endif%}
                             </strong>
                           </li>
+                          <li>Courses: <strong>
+                            <ul>
+                              {% for j in i.courses.all %}
+                              <li>{{j.course_name}}</li>
+                              {% empty %}
+                              None
+                              {%endfor%}
+                            </ul>
+                          </strong></li>
                         </ul>
                       </div>
                       <div class="modal-footer">
@@ -171,9 +181,9 @@
                 <td>{{ i.full_name }}</td>
                 <td>{{ i.email }}</td>
                 <td>{% for j in i.courses.all %}
-                {{j.course_name}},
-                {%endfor%}
-                </td>      
+                  {{j.course_name}},
+                  {%endfor%}
+                </td>
                 <td><button type="button" class="btn btn-info me-1" href="{% url 'view_teacher' i.teacher_id %}"
                     data-bs-toggle="modal" data-bs-target="#myModalTeacher{{i.teacher_id}}"><i
                       class="fa-sharp fa-solid fa-circle-info"></i></button>
@@ -199,12 +209,12 @@
                           <li>EduTeachID: <strong>{{i.teacher_id}}</strong></li>
                           <li>Email: <strong>{{i.email}}</strong></li>
                           <li>Courses: <strong>
-                <ul>
-                  {% for j in i.courses.all %}
-                  <li>{{j.course_name}}</li>
-                  {%endfor%}
-                </ul>
-                </strong></li>
+                              <ul>
+                                {% for j in i.courses.all %}
+                                <li>{{j.course_name}}</li>
+                                {%endfor%}
+                              </ul>
+                            </strong></li>
                         </ul>
                       </div>
                       <div class="modal-footer">
@@ -266,7 +276,7 @@
               <tr>
                 <th scope="col">MajorID</th>
                 <th scope="col">Major Name</th>
-                <th scope = "col">Actions</th>
+                <th scope="col">Actions</th>
               </tr>
             </thead>
             <tbody>
@@ -350,8 +360,8 @@
                     data-bs-target="#deleteModalCourse{{i.course_id}}"><i
                       class="fa-sharp fa-solid fa-trash"></i></button>
                 </td>
-                <div class="modal fade" id="myModalCourse{{i.course_id}}" tabindex="-1"
-                  aria-labelledby="myModalLabel10" aria-hidden="true">
+                <div class="modal fade" id="myModalCourse{{i.course_id}}" tabindex="-1" aria-labelledby="myModalLabel10"
+                  aria-hidden="true">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
@@ -410,8 +420,8 @@
           Course</button></a>
       {% endif %}
     </div>
-     <!-- Course Tab  -->
-     <div class="tab-pane fade" id="major_courseTab" role="tabpanel">
+    <!-- Course Tab  -->
+    <div class="tab-pane fade" id="major_courseTab" role="tabpanel">
       {% if teacher_courses %}
       <div class="card bg-light mb-3" id="coursesCard">
         <div class="card-header d-flex justify-content-between">
@@ -419,7 +429,7 @@
             <h4>Enrollment List</h4>
           </div>
           <div class="ml-auto"><a href="{%url 'add_major_course'%}"><button type="button" class="btn btn-primary">Join
-            Course</button></a></div>
+                Course</button></a></div>
         </div>
         <div class="card-body">
           <table class="table table-hover">
@@ -429,7 +439,7 @@
                 <th scope="col">CourseID</th>
                 <th scope="col">Major Name</th>
                 <th scope="col">Course Name</th>
-                <th scope = "col">Actions</th>
+                <th scope="col">Actions</th>
               </tr>
             </thead>
             <tbody>
@@ -439,8 +449,9 @@
                 <td>{{ i.course_id}}</td>
                 <td>{{ i.teacher_id.major_name}}</td>
                 <td>{{ i.course_id.course_name}}</td>
-                <td><button type="button" class="btn btn-info me-1" href="{% url 'view_major_course' i.major_id i.course_id %}"
-                    data-bs-toggle="modal" data-bs-target="#myModalMajorCourse{{i.major_id}}{{i.course_id}}"><i
+                <td><button type="button" class="btn btn-info me-1"
+                    href="{% url 'view_major_course' i.major_id i.course_id %}" data-bs-toggle="modal"
+                    data-bs-target="#myModalMajorCourse{{i.major_id}}{{i.course_id}}"><i
                       class="fa-sharp fa-solid fa-circle-info"></i></button>
                   <a class="btn btn-warning me-1" href="{% url 'edit_major_course' i.major_id i.course_id%}"><i
                       class="fa-sharp fa-solid fa-pen-to-square"></i></a>
