--- a/students/templates/students/classroom.html
+++ b/students/templates/students/classroom.html
@@ -6,29 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet" />
     <link href="{% static 'css/style.css'%}" rel="stylesheet" />
+    <title>Edutify</title>
+
     <style>
       .course-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-row-gap: 50px;
+        grid-column-gap: 20px;
+        padding-right: 90px;
+        padding-left: 150px;
+        padding-top: 70px;
       }
 
       .course-box {
+        width: 280px;
+        height: 220px;
         border: 1px solid #ccc;
-        padding: 10px;
-        margin: 5px;
-        width: 30%; 
+        padding: 15px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        background-color: #fff;
+        text-align: center;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
       }
-
       .course-name {
+        color: #333;
+        font-size: 18px;
         font-weight: bold;
+        margin: 10px 0;
       }
 
       .scu {
-        color: rgb(255, 0, 0);
+        font-size: 14px;
+        margin-bottom: 20px;
+        background-color: #007bff;
+        color: #fff;
+        padding: 5px 10px;
+        border-radius: 4px;
+        font-size: 12px;
       }
+
+      .course-box::before {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 5px;
+        background-color: #007bff;
+        border-radius: 8px 8px 0 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      .course-box:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+      }
+
+      /* Additional styling can be added here */
     </style>
-    <title>Edutify</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
