--- a/Final_Project/templates/registration/edit_profile.html
+++ b/Final_Project/templates/registration/edit_profile.html
@@ -1,15 +1,11 @@
-{% extends 'base.html' %}
-{% load static %}
-
-        
+{% extends 'registration/base.html' %}
 {% block content %}
-
 <div class="row center-align">
   <div class="col s6 offset-s3">
     <div class="card">
 
     <form method="post" enctype="multipart/form-data" action="" role="form">
-      {% csrf_token %}
+    {% csrf_token %}
     <h3 class="title is-3">Edit Profile</h3>
 
           <div class="file-field input-field">
