--- a/students/templates/students/login_student.html
+++ b/students/templates/students/login_student.html
@@ -16,22 +16,22 @@
 
   <div class="row center-align">
     <div class="col s6 offset-s3">
-      <h4>Edutify</h4>
+      <h4>Edutify Student</h4>
       <div class="card">
           <form method="post" action="" role="form">
           {% csrf_token %}
            <h3 class="title is-3">Login</h3>
             
-           <label class="col" style="font-size: medium;">Username</label>
+           <label class="col" style="font-size: medium;">Email</label>
            <div class="input-field col s12">
-            {{ form.username }}
+            {{ form.email }}
           </div>
           <label class = "col" style="font-size: medium;">Password</label>
           <div class="input-field col s12">
             {{ form.password }}
           </div>
 
-      {% if form.errors %}
+      {% if retry %}
       <div class="row">
         <div class="col s12">
           <span style="color: red; font-weight: bold;">Your username or password did not match.</span>
