--- a/students/templates/students/index.html
+++ b/students/templates/students/index.html
@@ -450,8 +450,8 @@
               {%endfor%}
             </tbody>
           </table>
-      <a href="{%url 'add_course'%}"><button type="button" class="btn btn-primary">Add
-          Course</button></a>
+        </div>
+      </div>
       {% endif %}
     </div>
   </div>
