--- a/students/templates/students/index.html
+++ b/students/templates/students/index.html
@@ -32,9 +32,15 @@
           <div>
             <h4>Student Lists</h4>
           </div>
+          <form method="GET" action="{% url 'get_student_search' %}">
+            <div class="md-form mt-0 active-cyan-2">
+              <input class="form-control" name="q" type="text" placeholder="Search" aria-label="Search" value="{{request.GET.q}}">
+            </div>
+            <button type="submit" class="btn btn-primary">Search</button>
+          </form>
           <div class="ml-auto"><a href="{%url 'add_student'%}"><button type="button" class="btn btn-primary">Add
                 Students</button></a></div>
-        </div>
+          </div>
         <div class="card-body">
           <table class="table table-hover">
             <thead>
