--- a/students/templates/students/startpage.html
+++ b/students/templates/students/startpage.html
@@ -21,17 +21,23 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Edutify</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor04" aria-controls="navbarColor04" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarColor04">
-        <form class="d-flex">
-          <a href="{%url 'student_login' %}"><button class="btn btn-primary my-2 my-sm-0" type="button">Login</button></a>
-        </form>
-      </div>
+        <a class="navbar-brand" href="#">Edutify</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor04" aria-controls="navbarColor04" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor04">
+            <form class="ms-auto order-2">
+                <a href="{%url 'student_login' %}">
+                    <button class="btn btn-primary my-2 my-sm-0" type="button">Login</button>
+                </a>
+            </form>
+            <a href="{% url 'index' %}">
+              <button class="btn btn-primary my-2 my-sm-0" type="button">Login</button>
+          </a>
+        </div>
     </div>
-  </nav>
+</nav>
+
 
 <!-- Header -->
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
