--- a/students/templates/students/admindashboard.html
+++ b/students/templates/students/admindashboard.html
@@ -1,4 +1,4 @@
-{% extends "students/base.html" %}
+{% extends "students/adminbase.html" %}
 {% block body %}
 <div class="container-fluid" style="margin: 10px;">
   <h3>Records</h3>
