--- a/students/templates/students/edit.html
+++ b/students/templates/students/edit.html
@@ -1,4 +1,4 @@
-{% extends "students/base.html" %}
+{% extends "students/adminbase.html" %}
 {%block body%}
 <h3 class = "text-center m-4">Update a Record</h3>
 {% if success %}
